[fix] mark steps as SKIPPED or MISSING after PENDING steps; add examples to run examples feature

--- a/source/TExampleRunner.cls
+++ b/source/TExampleRunner.cls
@@ -27,14 +27,14 @@ Public Function run_example(example As TExample, Optional silent) As Collection
         err_msg = vbNullString
         last_step_result = step_result(0)
         step_result = TStepRunner.run_step(step, silent:=silent)
-        If Not step_result(0) = STATUS_OK Then
+        ' mark all steps as skipped when the last step wasn't OK
+        If last_step_result <> STATUS_OK And last_step_result <> vbNullString Then
+            If step_result(0) <> STATUS_MISSING Then step_result(0) = STATUS_SKIPPED
+        End If
+        If Not step_result(0) = STATUS_OK And Not step_result(0) = STATUS_SKIPPED Then
             err_msg = step_result(1)
             'this is a hack because of the broken exception handling in vba (e.g. vba will overwrite custom err descriptions)
             If step_result(0) = STATUS_PENDING Then err_msg = TSpec.LastFailMsg
-        End If
-        ' mark all steps as skipped when the last step wasn't OK
-        If last_step_result = STATUS_MISSING Or last_step_result = STATUS_FAIL Or last_step_result = STATUS_SKIPPED Then
-            If step_result(0) <> STATUS_MISSING Then step_result(0) = STATUS_SKIPPED
         End If
         example_statistics.Add Array(step_result(0), step.OriginalStepDefinition)
         If Not silent Then TRun.Session.Reporter.report REPORT_MSG_TYPE_STEP, step.OriginalStepDefinition, step_result(0), err_msg
