--- a/step_definitions/Steps_Run_Examples.cls
+++ b/step_definitions/Steps_Run_Examples.cls
@@ -38,20 +38,20 @@ Public Sub Given_an_invalid_step_FF6BEF10050E()
     TSpec.expect(1).to_be 2
 End Sub
 
-Public Sub Given_a_feature_has_a_first_example_tagged_example_A6ACCC9CD3BB()
-    'Given a feature has a first example "tagged example" with the tag "@sample"
+Public Sub Given_a_feature_has_a_first_example_STR_with_the_t_4BAB3B57BE7E(step_expressions As Collection)
+    'Given a feature has a first example {string} with the tag {string}
     TStepVars.gherkin_text = "Feature: sample feature" & vbLf _
                         & vbLf _
-                        & "@sample" & vbLf _
-                        & "Example: tagged example" & vbLf _
+                        & step_expressions(2) & vbLf _
+                        & "Example: " & step_expressions(1) & vbLf _
                         & "  Given a valid step"
 End Sub
 
-Public Sub Given_the_feature_has_a_second_example_untagged_ex_EE05AE816679()
-    'Given the feature has a second example "un-tagged example" without any tag
+Public Sub Given_the_feature_has_a_second_example_STR_without_4F58B5E86A02(step_expressions As Collection)
+    'And the feature has a second example {string} without any tag
     TStepVars.gherkin_text = TStepVars.gherkin_text & vbLf _
                         & vbLf _
-                        & "Example: un-tagged example" & vbLf _
+                        & "Example: " & step_expressions(1) & vbLf _
                         & "  Given a valid step"
 End Sub
 
@@ -62,16 +62,15 @@ Public Sub When_the_example_is_executed_8C8F015690BC()
     
     Set example_runner = New TExampleRunner
     Set m_feature_statistics = TFeatureRunner.run_feature(m_parsed_feature, silent:=True)
-    'Set TStepVars.example_statistics = example_runner.run_example(m_parsed_feature.Clauses(1), silent:=True)
 End Sub
 
-Public Sub When_the_feature_is_executed_with_tag_parameter_sa_2662F331171B()
-    'When the feature is executed with tag parameter "@sample"
+Public Sub When_the_feature_is_executed_with_tag_parameter_ST_E9DFF72092D9(step_expressions As Collection)
+    'When the feature is executed with tag parameter {string}
     
     Dim parsed_feature As TFeature
     
     Set parsed_feature = TFeatureParser.parse_feature(TStepVars.gherkin_text)
-    Set m_feature_statistics = TFeatureRunner.run_feature(parsed_feature, filter_tag:="@sample", silent:=True)
+    Set m_feature_statistics = TFeatureRunner.run_feature(parsed_feature, filter_tag:=step_expressions(1), silent:=True)
 End Sub
 
 Public Sub Then_step_statistics_is_STR_121A2677FC0F(step_expressions As Collection)
@@ -84,8 +83,8 @@ Public Sub Then_step_statistics_is_STR_121A2677FC0F(step_expressions As Collecti
     TSpec.expect(TRun.Session.get_step_statistics(run_statistics)).to_be step_expressions(1)
 End Sub
 
-Public Sub Then_only_the_example_tagged_example_is_executed_0C73E26B826F()
-    'Then only the example "tagged example" is executed
+Public Sub Then_only_the_example_STR_is_executed_FD3BFD3B270C(step_expressions As Collection)
+    'Then only the example {string} is executed
     TSpec.expect(m_feature_statistics.Count).to_be 1
-    TSpec.expect(m_feature_statistics(1)("example")).to_be "Example: tagged example"
+    TSpec.expect(m_feature_statistics(1)("example")).to_be "Example: " & step_expressions(1)
 End Sub
