--- a/source/TReport.cls
+++ b/source/TReport.cls
@@ -89,8 +89,8 @@ Public Sub print_report(report_output As String, Optional consecutive, Optional 
     If IsMissing(silent) Then silent = False
     If IsMissing(consecutive) Then consecutive = False
     If silent Then
-        If ConsoleOutput <> vbNullString Then ConsoleOutput = vbLf & ConsoleOutput
         ConsoleOutput = ConsoleOutput & report_output
+        If Not consecutive Then ConsoleOutput = ConsoleOutput & report_output & vbLf
     ElseIf consecutive Then
         Debug.Print report_output;
     Else
