--- a/step_definitions/Steps_Run_features.cls
+++ b/step_definitions/Steps_Run_features.cls
@@ -9,7 +9,7 @@ Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
 Option Explicit
 
-Public Sub Given_a_feature_has_a_background_step_FD3D5509A1FD()
+Public Sub Given_a_feature_has_a_background_step_F0A675096BE8()
     'Given a feature has a background step
     TStepVars.gherkin_text = "Feature: sample feature" & vbLf _
                                 & vbLf _
@@ -17,8 +17,8 @@ Public Sub Given_a_feature_has_a_background_step_FD3D5509A1FD()
                                 & "    Given a background step" & vbLf
 End Sub
 
-Public Sub Given_the_feature_has_two_examples_with_on_step_0A1C38A7165C()
-    'Given the feature has two examples with on step
+Public Sub Given_the_feature_has_two_examples_with_on_step_DE25FF3D87A5()
+    'And the feature has two examples with on step
     TStepVars.gherkin_text = TStepVars.gherkin_text _
                                 & vbLf _
                                 & "  Example: example one" & vbLf _
@@ -28,15 +28,17 @@ Public Sub Given_the_feature_has_two_examples_with_on_step_0A1C38A7165C()
                                 & "    Given a step"
 End Sub
 
-Public Sub Given_a_step_C7224E350E70()
+Public Sub Given_a_step_C72276450E70()
     'Given a step
+    
 End Sub
 
-Public Sub Given_a_background_step_CF4BC54A1652()
+Public Sub Given_a_background_step_FF6B02C4DC47()
     'Given a background step
+    
 End Sub
 
-Public Sub When_the_feature_is_executed_A6DB756AA298()
+Public Sub When_the_feature_is_executed_8C8F454A90BC()
     'When the feature is executed
     
     Dim parsed_feature As TFeature
@@ -45,7 +47,7 @@ Public Sub When_the_feature_is_executed_A6DB756AA298()
     Set TStepVars.feature_statistics = TFeatureRunner.run_feature(parsed_feature, silent:=True)
 End Sub
 
-Public Sub Then_the_background_step_is_executed_once_before_e_36EB01695F3D()
+Public Sub Then_the_background_step_is_executed_once_before_e_AD9FFABBC1CE()
     'Then the background step is executed once before each example
     TSpec.expect(TStepVars.feature_statistics(1)).contains Array("OK", "Given a background step")
     TSpec.expect(TStepVars.feature_statistics(2)).contains Array("OK", "Given a background step")
