--- a/step_definitions/Steps_Parse_Features.cls
+++ b/step_definitions/Steps_Parse_Features.cls
@@ -43,11 +43,11 @@ End Sub
 Public Sub Then_the_parsed_result_contains_a_separate_item_fo_C01AA5CDB981()
     'Then the parsed result contains a separate item for each of the given elements
     TSpec.expect(m_parsed_feature.Name).to_be "sample feature"
-    TSpec.expect(m_parsed_feature.Clauses.Count).to_be 2
-    TSpec.expect(TypeName(m_parsed_feature.Clauses(1))).to_be "TRule"
-    TSpec.expect(m_parsed_feature.Clauses(1).Name).to_be "sample rule"
-    TSpec.expect(TypeName(m_parsed_feature.Clauses(2))).to_be "TExample"
-    TSpec.expect(m_parsed_feature.Clauses(2).Name).to_be "sample example"
+    TSpec.expect(m_parsed_feature.sections.Count).to_be 2
+    TSpec.expect(TypeName(m_parsed_feature.sections(1))).to_be "TRule"
+    TSpec.expect(m_parsed_feature.sections(1).Name).to_be "sample rule"
+    TSpec.expect(TypeName(m_parsed_feature.sections(2))).to_be "TExample"
+    TSpec.expect(m_parsed_feature.sections(2).Name).to_be "sample example"
 End Sub
 
 Public Sub Then_the_feature_description_is_set_to_those_two_l_3759AF1F585B()
@@ -57,18 +57,18 @@ End Sub
 
 Public Sub Then_the_parsed_feature_contains_a_rule_A7C0683CBA7A()
     'Then the parsed feature contains a rule
-    TSpec.expect(TypeName(m_parsed_feature.Clauses(1))).to_be "TRule"
+    TSpec.expect(TypeName(m_parsed_feature.sections(1))).to_be "TRule"
 End Sub
 
 Public Sub Then_the_rules_description_is_set_to_STR_750959DF7853(step_expressions As Collection)
     'Then the rules description is set to {string}
-     TSpec.expect(m_parsed_feature.Clauses(1).Description).to_be step_expressions(1)
+     TSpec.expect(m_parsed_feature.sections(1).Description).to_be step_expressions(1)
 End Sub
 
 Public Sub Then_the_parsed_features_contains_an_example_7B67F2AF5933()
     'Then the parsed features contains an example
-    TSpec.expect(TypeName(m_parsed_feature.Clauses(1))).to_be "TExample"
-    Set TStepVars.example = m_parsed_feature.Clauses(1)
+    TSpec.expect(TypeName(m_parsed_feature.sections(1))).to_be "TExample"
+    Set TStepVars.example = m_parsed_feature.sections(1)
 End Sub
 
 Public Sub Then_the_parsed_feature_doesnt_contain_any_error_EB00DB92B133()
@@ -78,7 +78,7 @@ End Sub
 
 Public Sub Then_the_parsed_result_contains_an_example_with_tw_5E84053FD2C3()
     'Then the parsed result contains an example with two steps
-    TSpec.expect(m_parsed_feature.Clauses(1).Steps.Count).to_be 2
+    TSpec.expect(m_parsed_feature.sections(1).Steps.Count).to_be 2
 End Sub
 
 Public Sub Then_the_Given_step_is_assigned_to_the_feature_9078F8233D0D()
