--- a/source/TReportFormatterProgress.cls
+++ b/source/TReportFormatterProgress.cls
@@ -9,8 +9,9 @@ Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
 Option Explicit
 
-Dim m_step_templates As Collection
+Dim m_step_implementation_templates As Collection
 Dim m_reporter As TReport
+Dim m_step_count As Long
 
 Public Function process_msg(msg_package As Collection, Optional silent) As String
 
@@ -20,6 +21,8 @@ Public Function process_msg(msg_package As Collection, Optional silent) As Strin
     message = format_msg_content(msg_package)
     Select Case msg_package(REPORT_MSG_TYPE)
         Case REPORT_MSG_TYPE_STEP
+            count_step
+            If step_counter Mod 80 = 0 And step_counter > 0 Then message = message & vbLf
             Reporter.print_report message, consecutive:=True, silent:=silent
         Case REPORT_MSG_TYPE_STATS
             Reporter.print_report message, silent:=silent
@@ -36,7 +39,7 @@ Public Function format_msg_content(msg_package As Collection, Optional silent) A
         Case REPORT_MSG_TYPE_STEP
             formatted_msg = format_step(msg_package(REPORT_MSG_CONTENT), msg_package(REPORT_MSG_STATUS), msg_package(REPORT_MSG_ERR))
         Case REPORT_MSG_TYPE_CODE_TEMPLATE
-            StepTemplates.Add msg_package(REPORT_MSG_CONTENT)
+            step_implementation_templates.Add msg_package(REPORT_MSG_CONTENT)
         Case REPORT_MSG_TYPE_STATS
             formatted_msg = vbLf & msg_package(REPORT_MSG_CONTENT)
             Reporter.print_report formatted_msg, silent:=silent
@@ -62,28 +65,25 @@ Public Function format_step(step_name As String, status As String, err_msg As St
         Case STATUS_SKIPPED
             formatted_msg = "S"
         Case STATUS_FAIL
-            formatted_msg = "F" & vbLf & "Err in step: " & step_name
+            formatted_msg = "F"
+            Reporter.add_err_msg_to_buffer "Err in step: " & step_name
         Case Else
             Debug.Print "unknown step status >" & status & "<"
     End Select
     'add err msg if available
     If err_msg <> vbNullString Then
-        formatted_msg = formatted_msg & vbLf & err_msg
+        Reporter.add_err_msg_to_buffer err_msg
     End If
     format_step = formatted_msg
 End Function
 
-Private Property Get StepTemplates() As Collection
+Private Property Get step_implementation_templates() As Collection
     
-    If m_step_templates Is Nothing Then
-        Set m_step_templates = New Collection
+    If m_step_implementation_templates Is Nothing Then
+        Set m_step_implementation_templates = New Collection
     End If
-    Set StepTemplates = m_step_templates
+    Set step_implementation_templates = m_step_implementation_templates
 End Property
-
-Private Sub Class_Terminate()
-    Set m_step_templates = Nothing
-End Sub
 
 Public Function get_code_templates_for_missing_steps() As String
 
@@ -91,7 +91,7 @@ Public Function get_code_templates_for_missing_steps() As String
     Dim template As Variant
     
     report_output = vbNullString
-    For Each template In StepTemplates
+    For Each template In step_implementation_templates
         report_output = vbLf & CStr(template)
     Next
     If report_output <> vbNullString Then
@@ -109,3 +109,19 @@ Public Property Let Reporter(ByVal new_reporter As TReport)
     Set m_reporter = new_reporter
 End Property
 
+Private Property Get step_counter() As Variant
+    'TODO: refactor get step_count from Session.Statistics
+    step_counter = m_step_count
+End Property
+
+Public Sub count_step()
+    m_step_count = m_step_count + 1
+End Sub
+
+Private Sub Class_Initialize()
+    m_step_count = 0
+End Sub
+
+Private Sub Class_Terminate()
+    Set m_step_implementation_templates = Nothing
+End Sub
