--- a/step_definitions/Steps_report_verbose.cls
+++ b/step_definitions/Steps_report_verbose.cls
@@ -29,13 +29,12 @@ Public Sub Given_a_description_line_STR_6B57E8EB7A49(step_expressions As Collect
     TStepVars.gherkin_text = step_expressions(1)
 End Sub
 
-Public Sub Given_a_report_message_STR_with_the_status_STR_fol_D8320E1F6BB3(step_expressions As Collection)
-    'Given a report message {string} with the status {string} followed by a docstring {string}
-    Dim docstring_step As String
+Public Sub When_a_step_STR_followed_by_a_docstring_STR_is_rep_8C80B341FF25(step_expressions As Collection)
+    'When a step {string} followed by a docstring {string} is reported with status {string}
+    Dim step_name As String
     
-    docstring_step = step_expressions(1) & vbLf _
-                        & step_expressions(3)
-    Set TStepVars.ReportMsg = TRun.Session.Reporter.build_msg_package(REPORT_MSG_TYPE_STEP, docstring_step, step_expressions(2))
+    step_name = step_expressions(1) & vbLf & """""""" & vbLf & step_expressions(2) & vbLf & """"""""
+    TStepVars.Session.Reporter.report REPORT_MSG_TYPE_STEP, step_name, step_expressions(3), silent:=True
 End Sub
 
 Public Sub When_the_execution_of_the_first_example_step_is_re_7D6F60A0AA78()
@@ -67,6 +66,6 @@ Public Sub Then_line_INT_of_the_resulting_output_is_STR_A434511445AD(step_expres
     'Then line {integer} of the resulting output is {string}
     Dim lines As Variant
     
-    lines = Split(TStepVars.ReportOutput, vbLf)
+    lines = Split(TStepVars.Session.Reporter.ConsoleOutput, vbLf)
     TSpec.expect(lines(step_expressions(1) - 1)).to_be step_expressions(2)
 End Sub
